--- a/UnityLauncherPro/Resources/Colors.xaml
+++ b/UnityLauncherPro/Resources/Colors.xaml
@@ -1,12 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:UnityLauncherPro">
+    
     <SolidColorBrush x:Key="ThemeDarkestBackground" Color="#FF121212"/>
     <SolidColorBrush x:Key="ThemeDarkMenuBar" Color="#FF0C0C0C"/>
     <SolidColorBrush x:Key="ThemeMainBackgroundColor" Color="#FF262626"/>
     <SolidColorBrush x:Key="ThemeTextBoxBackground" Color="#FF333337"/>
-    <SolidColorBrush x:Key="ThemeButtonBackground" Color="#FF3F3F46"/>
-    <SolidColorBrush x:Key="ThemeButtonForeground" Color="#FFC1C1C1"/>
     <SolidColorBrush x:Key="ThemeDeactiveTabForeground" Color="#FFC1C1C1"/>
     <SolidColorBrush x:Key="ThemeDeactiveTabBackground" Color="#FF1D1D1D"/>
     <SolidColorBrush x:Key="ThemeDatagridHeaderBackground" Color="#4C3F3F46"/>
@@ -20,11 +19,15 @@
     <SolidColorBrush x:Key="ThemeScrollBarBackground" Color="#FF151515"/>
     <SolidColorBrush x:Key="ThemeScrollBarFill" Color="#FF47474B"/>
 
-    <!--custom components-->
+    <!--buttons-->
     <SolidColorBrush x:Key="ThemeButtonForegroundDisabled" Color="#FF707070"/>
     <SolidColorBrush x:Key="ThemeButtonBackgroundMouseOver" Color="#FF494949"/>
     <SolidColorBrush x:Key="ThemeButtonWhiteText" Color="#FFFFFFFF"/>
     <SolidColorBrush x:Key="ThemeButtonBackgroundPressed" Color="#FF0F0F0F"/>
+    <SolidColorBrush x:Key="ThemeButtonBackground" Color="#FF3F3F46"/>
+    <SolidColorBrush x:Key="ThemeButtonForeground" Color="#FFC1C1C1"/>
+
+    <!--custom components-->
     <SolidColorBrush x:Key="ThemeMainTitle" Color="#FFB8B8B8"/>
     <SolidColorBrush x:Key="ThemeScrollBarEnabledForeground" Color="#FF000000"/>
 
