--- a/UnityLauncherPro/Resources/Colors.xaml
+++ b/UnityLauncherPro/Resources/Colors.xaml
@@ -58,4 +58,7 @@
     <!--focused button outline-->
     <SolidColorBrush x:Key="ThemeButtonFocusOutline" Color="#FF003D61"/>
 
+    <SolidColorBrush x:Key="ThemeSystemHighlight" Color="#FF0078D7"/>
+    
+
 </ResourceDictionary>
